#33: add JavaCompiler