@@ -14,9 +14,24 @@ dependencies {
 
     implementation(project(":common:database"))
 
+    implementation("org.apache.commons:commons-exec:1.3")
+
     testImplementation("org.springframework.boot:spring-boot-starter-test")
     testImplementation(platform("org.junit:junit-bom:5.9.1"))
     testImplementation("org.junit.jupiter:junit-jupiter")
+}
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
+}
+
+tasks.compileJava {
+    options.compilerArgs.add("--enable-preview")
+}
+
+tasks.compileTestJava {
+    options.compilerArgs.add("--enable-preview")
 }
 
 tasks.test {
